--- a/edufuturo/package.json
+++ b/edufuturo/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "reactstrap": "^9.2.2",
     "sass": "^1.77.2"
   },
   "devDependencies": {
