--- a/edufuturo/package.json
+++ b/edufuturo/package.json
@@ -9,24 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "mongoose": "^8.4.0",
-    "next": "14.2.3",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.7.0",
+    "next": "14.2.4",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "reactstrap": "^9.2.2",
-    "sass": "^1.77.2"
+    "sass": "^1.77.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "jest": "^29.7.0",
+    "eslint-config-next": "14.2.4",
     "typescript": "^5"
   }
 }
