Criando minha página de endereço

--- a/edufuturo/.vscode/settings.json
+++ b/edufuturo/.vscode/settings.json
@@ -1,12 +1,19 @@
 {
     "cSpell.words": [
         "bairro",
+        "Capacidade",
         "Cidade",
+        "Classe",
         "Complemento",
+        "Enviar",
+        "Estado",
+        "Estágio",
         "localidade",
         "logradouro",
         "Número",
         "Salvar",
-        "sigla"
+        "Série",
+        "sigla",
+        "Turno"
     ]
 }
