Novas páginas e melhorias no tratamento de erros

--- a/edufuturo/.vscode/settings.json
+++ b/edufuturo/.vscode/settings.json
@@ -1,13 +1,20 @@
 {
     "cSpell.words": [
+        "Aplicativo",
         "bairro",
+        "callout",
         "Capacidade",
         "Cidade",
         "Classe",
         "Complemento",
+        "contato",
         "Enviar",
+        "escolas",
         "Estado",
         "Estágio",
+        "Formulário",
+        "Futuro",
+        "Informações",
         "localidade",
         "logradouro",
         "Número",
