--- a/edufuturo/package.json
+++ b/edufuturo/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "mongodb": "^6.7.0",
     "next": "14.2.4",
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.23.1",
     "sass": "^1.77.5"
   },
   "devDependencies": {
